<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/take_photo_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/dialog_take_photo"
        android:textColor="@color/color_d9000000"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_17000000" />

    <TextView
        android:id="@+id/choose_album_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/dialog_cxczxz"
        android:textColor="@color/color_d9000000"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_17000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/color_0a000000" />

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/dialog_cancel"
        android:textColor="@color/color_d9000000"
        android:textSize="15sp" />

</LinearLayout>